2006-12-20 Werner Hoch <werner.ho@gmx.de>

	* src/x_dialog.c: cosmetics in the slot dialog,
          use GtkDialog for the coords and the about dialog, Code cleanups

2006-12-19 Werner Hoch <werner.ho@gmx.de>

	* src/x_dialog.c: cosmetics in the translate dialog
	  use GtkDialog for the arc angle, the text size and the snap size
	  dialog. Use GtkSpinButtons for the three dialogs.
	
2006-12-18 Werner Hoch <werner.ho@gmx.de>

	* src/x_dialog.c: some more code refactoring in the dialogs
	  edit filltype, edit linetype and edit text. Use the style constants
	  from x_dialog.h
	
	* include/x_dialog.h: added constants for dialog layout style

	* src/x_dialog.c: use GtkDialog for text entry dialog, some code 
	  refactoring. Fixed a bug in select_all_text_in_textview() which
	  toggled the selection instead of selecting it.
	   
	* src/o_picture.c: set transient_for flag for the dialogs
	  add image and modify image.

	* src/x_attribedit.c: set transient_for flag for the dialog

	* src/x_compselect.c: set the widget focus to the filter entry
	  present the window and select the filter text when reselecting
	  the dialog with "i". (ideas from Peter Clifton)

2006-12-17 Stuart Brorson <sdb@cloud9.net>
	* src/x_autonumber.c: Replace GTK-26 ism with 2.4 fcns.  Thanks,
	Werner, for the suggestion!

2006-12-16 Ales Hvezda   <ahvezda@geda.seul.org>

	Merged Carlos' glist work via Peter Brett's patch sets to the trunk

	2006-10-22 Carlos Nieves Onega <cnieves@iespana.es>
	
		* src/o_delete.c: Changed a check to use glib debugging
		functions.  Don't free objects at the end of o_delete,
		but free only the list.
	
		* src/o_misc.c: Added a sanity check.
	
		* src/o_basic.c: Don't free objects in the complex place
		list. It is only a reference to the objects in the page.

	2006-10-21 Carlos Nieves Onega <cnieves@iespana.es>

		* include/prototype.h, src/g_hook.c, src/i_basic.c,
		src/i_callbacks.c, src/o_attrib.c, src/o_basic.c,
		src/o_buffer.c, src/o_bus.c, src/o_copy.c,