@@ -1,3 +1,9 @@
+2006-12-21 Werner Hoch <werner.ho@gmx.de>
+
+	* src/x_dialog.c: cosmetics in the color dialog,
+	  use GtkDialog for the hotkeys dialog, use a GList to store the
+	  hotkeys and a GtkTreeView to show them.
+
 2006-12-20 Werner Hoch <werner.ho@gmx.de>
 
 	* src/x_dialog.c: cosmetics in the slot dialog,
